<resources>
    <string name="app_name">Cifumiga</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="clients">Clientes</string>
    <string name="add_client">Añadir Cliente</string>
    <string name="security">Seguridad</string>
    <string name="calendar">Cronograma</string>
    <string name="ruc">RUC</string>
    <string name="nombre_del_cliente">Nombre del cliente</string>
    <string name="agregar_cliente">Agregar Cliente</string>
    <string name="seleccionar_fecha">Seleccionar fecha</string>
    <string name="en_tramite">En trámite para: </string>
    <string name="contacto">Contacto</string>
    <string name="eliminar_tr_mite">Eliminar Trámite</string>
    <string name="fecha">Fecha</string>
    <string name="cliente">Cliente</string>
    <string name="tipo_de_servicio">Tipo de servicio</string>
    <string name="servicios">Servicios</string>
    <string name="descripcion">Descripción</string>
    <string name="nivel1">Desinfección</string>
    <string name="nivel2">Desratización</string>
    <string name="nivel3">Desinsectación</string>
    <string name="nivel4">Limpieza de reservorio</string>
    <string name="agregar_tramite">Agregar Hoja de trabajo</string>
    <string name="modificar_tramite">Modificar Hoja de trabajo</string>
    <string name="actualizar_tramite">Actualizar trámite</string>
    <string name="actualizar_cliente">Actualizar Cliente</string>
    <string name="dia">Día</string>
    <string name="mes">Mes</string>
    <string name="year">Año</string>
    <string name="urlAPI">http://192.168.1.47:8000</string>
    <string name="buscar_cliente">Buscar cliente…</string>
    <string name="buscar_un_cliente">Intenta buscar un cliente</string>
    <string name="fecha_del_tramite">Fecha de inicio</string>
    <string name="datos_del_tramite">Datos del trámite</string>
    <string name="intenta_seleccionarn_unafecha">Intenta seleccionar \nuna fecha</string>
    <string name="no_cuenta_con_servicios_establecidos">No cuenta con servicios establecidos</string>
    <string name="telefono">Telefono</string>
    <string name="direccion">Dirección</string>
    <string name="referencia">Referencia</string>
    <string name="problemas">Problemas</string>
    <string name="condiciones_subestandar">Condiciones Subestandar</string>
    <string name="servicio">Servicio</string>
    <string name="kilometraje">Kilometraje</string>
    <string name="agregar_kilometraje">Agregar Kilometraje</string>
    <string name="modificar_kilometraje">Modificar Kilometraje</string>
    <string name="tr_mites">Trámites</string>
    <string name="km_inicial">Km Inicial</string>
    <string name="km_final">Km final</string>
    <string name="resultado">Resultado</string>
    <string name="placa">Placa</string>
    <string name="correo">Correo</string>
    <string name="eliminar_kilometraje">Eliminar kilometraje</string>
    <string name="eliminar_cliente">Eliminar cliente</string>
    <string name="agregar_servicio">Agregar servicio</string>
    <string name="area">Área</string>
    <string name="dimension_m">Dimension (m²)</string>
    <string name="frecuencia">Frecuencia</string>
    <string name="precio">Precio</string>
    <string name="precio_s">Precio (S/.)</string>
    <string name="eliminar_servicio">Eliminar servicio</string>
    <string name="contrase_a">Contraseña</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="perfil">Perfil</string>
    <string name="datos_personales">Datos personales</string>
    <string name="guardar">Guardar</string>
    <string name="titulo_alerta_seguridad">Alerta de seguridad</string>
    <string name="mensaje_eliminar_registro">¿Estas seguro que quieres eliminar este registro?</string>
    <string name="registro_eliminado">Registro eliminado con éxito</string>
    <string name="ingresar_como_invitado">Ingresar como invitado</string>
    <string name="fecha_de_culminaci_n">Fecha de culminación</string>
    <string name="culminaci_n">Culminación</string>
    <string name="inicial">Inicial</string>
    <string name="especificar_tipo">Especificar tipo</string>
    <string name="nombre">Nombre</string>
    <string name="celular">Celular</string>
    <string name="prefs_file">com.cifumiga.application.PREFERENCE_FILE_KEY</string>
    <string name="hoja_de_trabajo">Hoja de trabajo</string>
    <string name="programaci_n_de_trabajos">Programación de trabajos</string>
    <string name="informaci_n_de_la_empresa">Información de la empresa</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="p_gina_web">Página web</string>
    <string name="numero_de_certificado">Numero de certificado</string>
    <string name="selecciona_la_frecuencia">Selecciona la frecuencia</string>
    <string name="selecciona_el_tipo">Selecciona el tipo</string>
    <string name="selecciona_el_cliente">Selecciona el cliente</string>
    <string name="n_mero_de_certificado">Número de certificado</string>
    <string name="especificar_secuencia">Especificar secuencia (días)</string>
    <string name="agregar_certificado">Agregar certificado</string>
</resources>