<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_clients">

    <fragment
        android:id="@+id/nav_clients"
        android:name="com.cifumiga.application.ui.clients.ClientsFragment"
        android:label="@string/clients"
        tools:layout="@layout/fragment_clients" />

    <fragment
        android:id="@+id/nav_security"
        android:name="com.cifumiga.application.ui.security.SecurityFragment"
        android:label="@string/security"
        tools:layout="@layout/fragment_security" />

    <fragment
        android:id="@+id/nav_calendar"
        android:name="com.cifumiga.application.ui.calendar.CalendarFragment"
        android:label="@string/calendar"
        tools:layout="@layout/fragment_calendar" />
</navigation>