<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.calendar.UpdateTramite">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:id="@+id/fechainputs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:text="@string/fecha_del_tramite" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnFecTramUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="8dp"
                    android:backgroundTint="@color/blue_200"
                    android:contentDescription="@string/seleccionar_fecha"
                    android:fontFamily="@font/nunito_bold"
                    android:text="Seleccionar"
                    app:cornerRadius="100dp" />

                <EditText
                    android:id="@+id/txtFecTramUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:hint="@string/fecha"
                    android:inputType="none" />
            </LinearLayout>

        </LinearLayout>



        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/fechainputs"/>


        <TextView
            android:id="@+id/textdivider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:text="@string/datos_del_tramite"
            app:layout_constraintTop_toBottomOf="@+id/divider"/>


        <TextView
            android:id="@+id/textview4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:textSize="11sp"
            android:text="Selecciona el cliente"
            app:layout_constraintTop_toBottomOf="@+id/textdivider"/>
        <Spinner
            android:id="@+id/txtClienTramUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"

            android:layout_marginEnd="24dp"
            android:inputType="none"
            app:layout_constraintTop_toBottomOf="@+id/textview4"/>



        <EditText
            android:id="@+id/txtContactTramUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/contacto"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtClienTramUp"/>


        <EditText
            android:id="@+id/txtTelefonoTramUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/telefono"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtContactTramUp"/>


        <EditText
            android:id="@+id/txtDireccionTramUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/direccion"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@+id/txtTelefonoTramUp"/>



        <EditText
            android:id="@+id/txtReferenciaTramUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/referencia"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@+id/txtDireccionTramUp"/>


        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/txtReferenciaTramUp"/>


        <TextView
            android:id="@+id/textdivider2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:text="@string/servicio"
            app:layout_constraintTop_toBottomOf="@+id/divider2"/>

        <TextView
            android:id="@+id/textview5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:textSize="11sp"
            android:text="Selecciona el tipo"
            app:layout_constraintTop_toBottomOf="@+id/textdivider2"/>
        <Spinner
            android:id="@+id/txtTipoTramUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:inputType="none"
            tools:ignore="LabelFor"
            app:layout_constraintTop_toBottomOf="@+id/textview5"/>
        <EditText
            android:id="@+id/txtTipoOtroTramUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:hint="@string/especificar_tipo"
            android:layout_marginEnd="24dp"
            android:inputType="text"
            tools:ignore="LabelFor"
            app:layout_constraintTop_toBottomOf="@+id/txtTipoTramUp"/>

        <TextView
            android:id="@+id/textview6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:textSize="11sp"
            android:text="Selecciona la frecuencia"
            app:layout_constraintTop_toBottomOf="@+id/txtTipoOtroTramUp"/>
        <Spinner
            android:id="@+id/txtFrecuenciaTramiteUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"

            android:layout_marginEnd="24dp"
            android:inputType="none"
            tools:ignore="LabelFor"
            app:layout_constraintTop_toBottomOf="@+id/textview6"/>


        <CheckBox
            android:id="@+id/op1Up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nivel1"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtFrecuenciaTramiteUp"/>


        <CheckBox
            android:id="@+id/op2Up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nivel2"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/op1Up"/>


        <CheckBox
            android:id="@+id/op3Up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nivel3"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/op2Up"/>

        <CheckBox
            android:id="@+id/op4Up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nivel4"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/op3Up"/>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout10"
            android:layout_width="match_parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_height="150dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/problemas"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/op4Up">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtProblemaTramUp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="top" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout11"
            android:layout_width="match_parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_height="150dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/condiciones_subestandar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout10">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtCondicionTramUp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="top" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/bdAddTramiteUp"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/guardar"
            app:cornerRadius="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout11" />




    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
